--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.8.2",
+    "react-router-dom": "^7.9.3",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
